# logo-detector

./: .gitignore  CLAUDE.md  pyproject.toml  spec.md
src/logo_detector/: main.py
