[project]
name = "logo-detector"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Irakliskhirtladze", email = "irskhirtladze@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "opencv-python-headless>=4.13.0.92",
]

[project.scripts]
logo-detector = "logo_detector:main"

[build-system]
requires = ["uv_build>=0.9.13,<0.10.0"]
build-backend = "uv_build"
